@@ -159,11 +159,13 @@
 
 <addon id="plugin.video.serialzone"
        name="India - SerialZone"
-       version="1.2"
+       version="1.3"
        provider-name="sorkan">
   <requires>
     	<import addon="xbmc.python" version="2.1.0"/>
 	<import addon="script.module.urlresolver" version="1.0.0"/>
+    <import addon="script.module.requests" />
+    <import addon="script.module.httplib2" />
 	<import addon="plugin.video.youtube" version="2.9.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
@@ -241,7 +243,7 @@
 
 <addon id="script.video.F4mProxy"
 	     name="F4mProxy"
-	     version="2.2.6"
+	     version="2.2.7"
 	     provider-name="Shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
