@@ -7,3 +7,6 @@ icon change
 
 [B]Version 1.2[/B]
 Update to default.py script to fix logic. 
+
+[B]Version 1.3[/B]
+updated url with / and using Request due to site's bug
